080530 cs  wb        En_us used for local time formats.
080602 cs  wb        Template for application file and .opt file automatically created.
080624 cs  wb        Secure distribution using scp and ssh instead of ftp and rsh implemented.
080626 cs  wb        authorized_keys file included in distribution.
081009 cs  script    New script functions GetNextFreeUserVid, CheckNewVid and CheckNewVolumeName.
081009 cs  wb        New command 'open database' to open the database for a volume.
081009 cs  wb        Qualifier /quiet added to 'save' command to avoid questions when saving directory volume.
081009 cs  wb        New pages in Configure DirectoryVolume wizard to register a volume and open the database for a volume.
081009 cs  wb        New script functions CheckSystemGroup, GetNextFreeUserVid, CheckNewVid, CheckNewVolumeName and GetCurrentVolume.
081110 cs  plc       Bugfix in execute order for Set/Res/Sto objects without input or output connection.
081218 cs  plc       Bugfix in flow file. Trace data wasn't stored at change of mode from edit to view.
090218 cs  plc       Bugfix, activating connect function when nothing was selected could cause X exception.
090218 cs  plc       Bugfix, connect from local plant navigator on attribute objects didn't work.
090223 cs  plc       DataArithm, structdef statement added to DataArithm code.
090224 cs  plc       Handling of unexpected mousekey combinations in plc editor.
090224 cs  wb        Error message in class editor if Elements > 1 and arraybit not set in $Attribute added.
090225 cs  script    Script functions GetClassListAttrRef() and GetNextAttrRef() added.
090306 cs  wb        Crossreferences on Co signals added.
090306 cs  plc       Default include in ra_plc_user.h added. 
090507 cs  adm       In projectlist, the project name in a ProjectReg is changed, also the path is changed.
090507 cs  wb        Bugfix in directory wizard, for nodenames containing '-' NodeConfig object was not configured correctly.